fixxed jumpto cminfobubble

--- a/app/less/base/app.less
+++ b/app/less/base/app.less
@@ -131,7 +131,7 @@ button{
   .pos-rel;
   .full-view;
   padding-top: @cm-header-height;
-  padding-bottom: @cm-footer-height + 0.5;
+  padding-bottom: @cm-footer-height + 2;
   &.no-header{padding-top:0}
   &.no-footer{padding-bottom:0}
 }
